z-index corrected

--- a/css/main.css
+++ b/css/main.css
@@ -517,7 +517,7 @@ footer p {
 }
 
 .menu-wrap .menu > div {
-  background: red;
+  background: #333;
   border-radius: 50%;
   width: 200vw;
   height: 200vw;
